@@ -16,6 +16,6 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.  */
 
-const char *lto_kind_str[5] __attribute__ ((visibility ("hidden")));
-const char *lto_visibility_str[4] __attribute__ ((visibility ("hidden")));
-const char *lto_resolution_str[9] __attribute__ ((visibility ("hidden")));
+extern const char *lto_kind_str[] __attribute__ ((visibility ("hidden")));
+extern const char *lto_visibility_str[] __attribute__ ((visibility ("hidden")));
+extern const char *lto_resolution_str[] __attribute__ ((visibility ("hidden")));
